8. Fixed image width on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,7 @@ main {
 }
 
 .meme--image {
-    width: 80%;
+    width: 100%;
     border-radius: 3px;
     margin-top: 1rem;
 }
